--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wxt-vue-starter",
+  "name": "快速收藏夹",
   "description": "manifest.json description",
   "private": true,
   "version": "0.0.0",
@@ -18,7 +18,9 @@
     "vue": "^3.5.12"
   },
   "devDependencies": {
+    "@types/sql.js": "^1.4.9",
     "@wxt-dev/module-vue": "^1.0.1",
+    "sql.js": "^1.13.0",
     "typescript": "5.6.3",
     "vue-tsc": "^2.1.10",
     "wxt": "^0.20.0"
